Bug report. Exporting Audio from Video Editor #115305

Closed
opened 2023-11-23 14:44:16 +01:00 by Alexey-Medvedev · 8 comments

Hello! )

System Information
Operating system: Windows 10 Pro
Graphics card: Geforce GTX1060

Blender Version
4.0

Equalizer Modifier has been added in: 1015bed2fd

  1. I was editing sound FX in Video Editor and found that Equalizer Modifier had not been exported during Render Animation. I mean all the sound clips exported without equalizer settings. You can find all the preferences on the attached picture.
  2. If I make Render > Render Audio it works but also not for all sound clips. It unpredictable.
  3. Some times It rendering audio without animation of volume level (increasing - decreasing). Restarting the program can fix it for short time.

In general the sound editing is unpredictable for now.
Thanks!

Hello! ) **System Information** Operating system: Windows 10 Pro Graphics card: Geforce GTX1060 **Blender Version** 4.0 Equalizer Modifier has been added in: 1015bed2fd89c5a8f741c5f1dd22099a9441bea0 1. I was editing sound FX in Video Editor and found that Equalizer Modifier had not been exported during Render Animation. I mean all the sound clips exported without equalizer settings. You can find all the preferences on the attached picture. 2. If I make Render > Render Audio it works but also not for all sound clips. It unpredictable. 3. Some times It rendering audio without animation of volume level (increasing - decreasing). Restarting the program can fix it for short time. In general the sound editing is unpredictable for now. Thanks!
Alexey-Medvedev added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-11-23 14:44:16 +01:00
Iliya Katushenock added the
Interest
VFX & Video
Interest
Video Sequencer
labels 2023-11-23 16:54:02 +01:00

Thank you, @Alexey-Medvedev, for submitting the report

You mentioned 2 issues.

  • Equalizer Modifier settings not being exported during Render Animation and
  • Unpredictable behavior of sound editing

Could you provide a simplified .blend file? Then we can confirm the issue and forward it to the developers.

Thank you, @Alexey-Medvedev, for submitting the report You mentioned 2 issues. - Equalizer Modifier settings not being exported during Render Animation and - Unpredictable behavior of sound editing Could you provide a simplified .blend file? Then we can confirm the issue and forward it to the developers.
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-11-23 17:08:32 +01:00

Hello, Germano! @mano-wii
Here's the archive with blender file and all clips and sequences - https://ru.files.fm/f/e5fh8scb5x
Equalizer applied to sound clips on 6-7 tracks does not export during rendering.

Thanks!

Hello, Germano! @mano-wii Here's the archive with blender file and all clips and sequences - https://ru.files.fm/f/e5fh8scb5x Equalizer applied to sound clips on 6-7 tracks does not export during rendering. Thanks!

I can reproduce this issue, also equalizer doesn't work when .blend file is reopened.

I can reproduce this issue, also equalizer doesn't work when .blend file is reopened.
Richard Antalik added
Status
Confirmed
Type
Bug
and removed
Status
Needs Information from User
Type
Report
labels 2023-12-12 18:37:25 +01:00
Jesse Yurkovich added the
Module
VFX & Video
label 2023-12-13 08:19:13 +01:00

@Alexey-Medvedev I have created fix, hopefully it will be merged soon, but the unreliable volume property you mention sounds odd to me. Can you perhaps make new report with sample .blend file and steps to reproduce that specifically?

@Alexey-Medvedev I have created fix, hopefully it will be merged soon, but the unreliable volume property you mention sounds odd to me. Can you perhaps make new report with sample .blend file and steps to reproduce that specifically?

@iss I recorded a video with demonstration of animated sound exporting bug.
Here it is https://ru.files.fm/u/xkqczwy8ed?k=e50ccec6

  • the file will be available on this file exchanger by 02 of Jan 24
@iss I recorded a video with demonstration of animated sound exporting bug. Here it is https://ru.files.fm/u/xkqczwy8ed?k=e50ccec6 * the file will be available on this file exchanger by 02 of Jan 24
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-19 17:38:44 +01:00

@Alexey-Medvedev Unfortunately I wasn't able to reproduce that issue. Check with tommorow's build and if these issues persist, please make new report. It would be nice to have .blend file with some sound that you can test and upload it here.

@Alexey-Medvedev Unfortunately I wasn't able to reproduce that issue. Check with tommorow's build and if these issues persist, please make new report. It would be nice to have .blend file with some sound that you can test and upload it here.

@iss here's the blender file with only sound clip I showed you in previous video. I think that would be enough for test. Thanks!
https://ru.files.fm/u/bf88h63484?k=24974055

@iss here's the blender file with only sound clip I showed you in previous video. I think that would be enough for test. Thanks! https://ru.files.fm/u/bf88h63484?k=24974055

I can reproduce the issue. Seems a bit random. Can you make new report for this?
Also please upload files directly to this site if possible. Especially if alternative is site in cyrillic :)

I can reproduce the issue. Seems a bit random. Can you make new report for this? Also please upload files directly to this site if possible. Especially if alternative is site in cyrillic :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115305
No description provided.